kubernetes/_clusters/firefly/miscellaneous/dashboard/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: dashboard-inject-token
    namespace: misc
spec:
    headers:
        customRequestHeaders:
            Authorization: Bearer eyJhbGciOiJSUzI1NiIsImtpZCI6IkMzZUZ5WGFVQ0VBQlVUa2Q3bVRLajhKYzAzREhZbHpxR0draV9feHFYdWcifQ.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwia3ViZXJuZXRlcy5pby9zZXJ2aWNlYWNjb3VudC9uYW1lc3BhY2UiOiJtaXNjIiwia3ViZXJuZXRlcy5pby9zZXJ2aWNlYWNjb3VudC9zZWNyZXQubmFtZSI6ImRhc2hib2FyZC1hZG1pbi10b2tlbiIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VydmljZS1hY2NvdW50Lm5hbWUiOiJkYXNoYm9hcmQtYWRtaW4iLCJrdWJlcm5ldGVzLmlvL3NlcnZpY2VhY2NvdW50L3NlcnZpY2UtYWNjb3VudC51aWQiOiI5M2NkODlkOC0 [...]
sops:
    age:
        - recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJOHlvSCswWTRzaWx4ZmNE
[...]
            8PxT++zZAJZZ3GAB3bcDe0Tdq2DTxAOA21bZLgUc4quRDs8xszbhMQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-01-01T22:28:34Z"
    mac: ENC[AES256_GCM,data:pnmNmxH4NQlFOlF6P78CXphEIlkcbXv3kuq0FiM7v2q2jR86ET1EIdaURc58mNGjoboDoPA26dB4Ymfq3b5FPLu0fpP1zcD02uRE1ojSODQBQz5eRbANxNxtlcrdOt41+89cMu6W/bnzSWdzuyQTXiSB6stQW1C2pzwj6ToZdVQ=,iv:rk5+REaXznUzwXmNxH08W45FaqEa4G7A16fZ9ONLanE=,tag:QU/7Y6VWatfU+B/vZlr1sg==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
