kubernetes/_clusters/firefly/miscellaneous/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: misc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: misc-dashboard-inject-token@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dashboard.sargeant.co
      secretName: dashboard-tls
  rules:
    - host: dashboard.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8sboard-kong-proxy
                port:
                  number: 80
